<resources>
    <string name="app_name">Season Soccer Manager</string>
    <!--activity_main-->
    <string name="main_texto">Informe seus dados</string>
    <string name="main_login">Login</string>
    <string name="main_senha">Senha</string>
    <string name="main_enviar">Enviar</string>
    <string name="main_nova_conta">Criar uma nova conta</string>
    <string name="main_esqueceu_senha">Esqueceu a senha?</string>
    <!---->
    <!--activity_nova_conta-->
    <string name="conta_texto">Cadastrar Nova Conta</string>
    <string name="conta_nome">Nome</string>
    <string name="conta_login">Login(apenas letras e números)</string>
    <string name="conta_email">Email</string>
    <string name="conta_senha">Senha</string>
    <string name="conta_senha_confirmar">Confirma Senha</string>
    <string name="conta_cadastrar">Cadastrar</string>
    <string name="conta_cancelar">Cancelar</string>
    <!---->
    <!--activity_index-->
    <string name="index_texto">Escolha uma das opções abaixo</string>
    <string name="index_nova">Nova Temporada</string>
    <string name="index_entrar">Entrar numa Temporada</string>
    <string name="index_cancelar">Encerrar</string>
    <!--activity_nova_temporada-->
    <string name="tmeporada_texto">Informe o nome da Temporada</string>
    <string name="temporada_nome">Nome</string>
    <string name="temporada_cadastrar">Cadastrar</string>
    <string name="temporada_sync">Compartilhar</string>
    <!---->
    <!--activity_entrar_temporada-->
    <string name="entrar_temp_texto">Entrar numa Temporada</string>
    <string name="entrar_temp_nome">Digite aqui o nome da Temporada</string>
    <string name="entrar_temporada">Entrar</string>
    <!---->
    <!--activity_novo_ranking-->
    <string name="novo_rnk_texto">Temporada: </string>
    <string name="novo_rnk_campeonato">Digite aqui o nome do Campeonato</string>
    <string name="novo_rnk_time">Digite aqui o nome do Time</string>
    <string name="novo_rnk_pontos">Insira aqui os pontos obtidos</string>
    <string name="novo_rnk_cadastrar">Cadastrar</string>
    <string name="novo_rnk_compartilhar">Compartilhar</string>
    <string name="novo_rnk_visualizar">Visualizar</string>
    <!---->
    <!--activity_temporada_rankings-->
    <string name="temp_rnk_texto">Lista de Rankings - Temporada: </string>
    <string name="temp_rnk_encerrar">Encerrar Temporada</string>
    <!---->
    <!--activities-->
    <string name="user">Usuário: </string>
    <!---->
</resources>
