<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.metodista.pap.ssm.NovaContaActivity">

    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_gravity="top"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/conta_texto"
        android:textSize="20sp"
        android:textColor="@color/texto"
        android:layout_below="@+id/logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nome"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/texto"
        android:layout_centerHorizontal="true"
        android:hint="@string/conta_nome"
        android:layout_gravity="center"
        android:inputType="text"
        android:textColorHint="@color/font"
        android:textColor="@color/font"
        android:textSize="15sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/nome"
        android:layout_centerHorizontal="true"
        android:hint="@string/conta_email"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/font"
        android:textColor="@color/font"
        android:textSize="15sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/senha"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:hint="@string/conta_senha"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:textColorHint="@color/font"
        android:textColor="@color/font"
        android:textSize="15sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmaSenha"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/senha"
        android:layout_centerHorizontal="true"
        android:hint="@string/conta_senha_confirmar"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:textColorHint="@color/font"
        android:textColor="@color/font"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmaSenha"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conta_cadastrar"
            android:id="@+id/cadastrarBtn"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conta_cancelar"
            android:id="@+id/cancelarBtn" />
    </LinearLayout>

</RelativeLayout>