<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.metodista.pap.ssm.MainActivity">

    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:id="@+id/mainLogo"
        android:src="@drawable/logo"
        android:layout_gravity="top"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/mainTexto"
        android:layout_below="@+id/mainLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/main_texto"
        android:textSize="25sp"
        android:textColor="@color/texto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/mainLogin"
        android:layout_below="@+id/mainTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="29dp"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/font"
        android:textColor="@color/font"
        android:hint="@string/main_login"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/mainSenha"
        android:layout_below="@+id/mainLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/main_senha"
        android:layout_marginTop="19dp"
        android:layout_alignParentLeft="true"
        android:textColorHint="@color/font"
        android:textColor="@color/font"
        android:layout_alignParentStart="true"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/mainBtnLogin"
        android:layout_below="@+id/mainSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_enviar"
        android:layout_centerHorizontal="true"
        android:onClick="enviar"/>

    <TextView
        android:id="@+id/mainLinkNovo"
        android:layout_below="@+id/mainBtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_nova_conta"
        android:layout_marginTop="16dp"
        android:textColor="@color/link"
        android:layout_centerHorizontal="true"
        android:onClick="criarNovaConta"/>

    <TextView
        android:id="@+id/mainLinkSenha"
        android:layout_below="@+id/mainLinkNovo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_esqueceu_senha"
        android:layout_marginTop="13dp"
        android:textColor="@color/link"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
