<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.metodista.pap.ssm.IndexActivity">

    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_gravity="top"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/index_texto"
        android:textSize="20sp"
        android:textColor="@color/texto"
        android:layout_below="@+id/logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/index_nova"
        android:id="@+id/novaBtn"
        android:layout_below="@+id/texto"
        android:layout_centerHorizontal="true"
        android:onClick="criarNovaTemporada"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/index_entrar"
        android:id="@+id/entrarBtn"
        android:layout_below="@+id/novaBtn"
        android:layout_centerHorizontal="true"
        android:onClick="selecionarTemporadas"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/index_cancelar"
        android:id="@+id/cancelarBtn"
        android:layout_below="@+id/entrarBtn"
        android:layout_centerHorizontal="true"
        android:onClick="encerrar"/>

    <TextView
        android:id="@+id/indexUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="left"
        android:text="@string/user"
        android:textSize="18sp"
        android:textColor="@color/texto"
        android:layout_below="@+id/cancelarBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>