<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.metodista.pap.ssm.NovaTemporadaActivity">

    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:id="@+id/temporadaLogo"
        android:src="@drawable/logo"
        android:layout_gravity="top"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/temporadaTexto"
        android:layout_below="@+id/temporadaLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/tmeporada_texto"
        android:textSize="22sp"
        android:textColor="@color/texto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/temporadaNome"
        android:layout_below="@+id/temporadaTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="29dp"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/font"
        android:textColor="@color/font"
        android:hint="@string/temporada_nome"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/tmeporadaBtnCadastrar"
        android:layout_below="@+id/temporadaNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temporada_cadastrar"
        android:layout_centerHorizontal="true"
        android:onClick="cadastrar"/>
    
</RelativeLayout>