<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.metodista.pap.ssm.EntrarTemporadaActivity">

    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:id="@+id/entrarTempLogo"
        android:src="@drawable/logo"
        android:layout_gravity="top"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/entrarTempTexto"
        android:layout_below="@+id/entrarTempLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/entrar_temp_texto"
        android:textSize="20sp"
        android:textColor="@color/texto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/entrarTempNome"
        android:layout_below="@+id/entrarTempTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/font"
        android:textColor="@color/font"
        android:hint="@string/entrar_temp_nome"
        android:layout_gravity="center"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/entrarTempBtn"
        android:layout_below="@+id/entrarTempNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar_temporada"
        android:layout_centerHorizontal="true"
        android:onClick="entrarNumaTemporada"/>

</RelativeLayout>